--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .bundle/
+*.swp
+Gemfile.lock*
 log/*.log
 pkg/
 .DS_Store
 .Gemfile.lock*
 *.gem
+coverage
 spec/dummy/db/*.sqlite3
 spec/dummy/log/*.log
 spec/dummy/tmp/
@@ -12,4 +15,5 @@ spec/dummy/designs
 spec/dummy/newsletters
 spec/dummy/public
 spec/dummy/config/database.yml
+spec/dummy/config/database.local.yml
 
