--- a/spec/dummy/config/mail_manager.yml
+++ b/spec/dummy/config/mail_manager.yml
@@ -13,10 +13,11 @@ common:
   secret: !binary |-
     YjEwMTY3OWE5MDk3ZmVmMzIxZThmNWI5YzZlYmIw
   bounce:
-    email_address: bounces@example.com
+    email_address: bounces@lvh.me
     login: test
     password: secret
-    pop_server: pop.example.com
+    pop_server: pop.lvh.me
+    port: 11002
   #requires_authentication: true
   #authorized_roles:
   #  - admin
