--- a/spec/dummy/.env.development
+++ b/spec/dummy/.env.development
@@ -1,3 +1,5 @@
-POST_OFFICE_SMTP_PORT=25002
-POST_OFFICE_POP_PORT=11002
-SERVER_PORT=3001
+export POST_OFFICE_SMTP_PORT=25002
+export POST_OFFICE_POP_PORT=11002
+export SERVER_PORT=3001
+export MAIL_MANAGER_GEM_PATH=/home/chrisboy/Projects/LSI/mail_manager
+export NEWSLETTER_GEM_PATH=/home/chrisboy/Projects/LSI/newsletter
