--- a/spec/dummy/.env.test
+++ b/spec/dummy/.env.test
@@ -1,2 +1,4 @@
 POST_OFFICE_SMTP_PORT=25002
 POST_OFFICE_POP_PORT=11002
+MAIL_MANAGER_GEM_PATH=/home/chrisboy/Projects/mail_manager
+NEWSLETTER_GEM_PATH=/home/chrisboy/Projects/newsletter
